--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@vee-validate/rules": "^4.15.1",
+    "@vee-validate/yup": "^4.15.1",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
