--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@headlessui/vue": "^1.7.23",
     "@vee-validate/rules": "^4.15.1",
     "@vee-validate/yup": "^4.15.1",
+    "pinia": "^3.0.4",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
+    "vuex": "^4.1.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
